--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<iframe src="https://awalha.wixsite.com/radiologique" style="width:100%; height:0vw;" frameborder="0"></iframe>
+<iframe src="https://awalha.wixsite.com/radiologique" width="100%" height="300">
+  <p>Your browser does not support iframes.</p>
+</iframe>
