--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<iframe src="https://awalha.wixsite.com/radiologique" width="100%" height="3300">
-  <p>Your browser does not support iframes.</p>
-</iframe>
+<div style="overflow:hidden; height:calc(100vh - 50px);">
+  <iframe
+    src="https://awalha.wixsite.com/radiologique"
+    style="width:100%; height:calc(100vh + 50px); margin-top:-50px; border:none;">
+  </iframe>
+</div>
