--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
-<div style="overflow:hidden; height:calc(100vh - 50px);">
-  <iframe
-    src="https://awalha.wixsite.com/radiologique"
-    style="width:100%; height:calc(100vh + 0px); margin-top:-50px; border:none;">
-  </iframe>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Embedded Wix Site - No Top Space</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Remove all default margin and padding from html and body */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    /* Make sure the container fills the viewport */
+    .iframe-container {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+    /* Style the iframe to fill the container and remove border */
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <div class="iframe-container">
+    <iframe src="https://awalha.wixsite.com/radiologique" allowfullscreen></iframe>
+  </div>
+</body>
+</html>
