--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Embedded Wix Site - No Top Space</title>
+  <title>Embedded Wix Site - No Banner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Remove all default margin and padding from html and body */
     html, body {
       margin: 0;
       padding: 0;
@@ -13,19 +12,19 @@
       width: 100%;
       box-sizing: border-box;
     }
-    /* Make sure the container fills the viewport */
     .iframe-container {
       width: 100vw;
       height: 100vh;
       overflow: hidden;
     }
-    /* Style the iframe to fill the container and remove border */
     iframe {
       width: 100%;
       height: 100%;
       border: none;
       display: block;
     }
+    /* If you can't remove the banner in HTML, hide it with this: */
+    /* .banner, #top-banner { display: none !important; } */
   </style>
 </head>
 <body>
