--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Embedded Wix Site - No Banner</title>
+  <title>No Banner, No Top Space</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       width: 100%;
+      height: 100%;
       box-sizing: border-box;
+    }
+    /* Remove any possible banner or spacer elements */
+    .banner, .header, .spacer {
+      display: none !important;
+      height: 0 !important;
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+    /* Responsive fix for all screen sizes */
+    @media (max-width: 1000px) {
+      .banner, .header, .spacer {
+        display: none !important;
+        height: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
+      }
     }
     .iframe-container {
       width: 100vw;
@@ -23,8 +39,6 @@
       border: none;
       display: block;
     }
-    /* If you can't remove the banner in HTML, hide it with this: */
-    /* .banner, #top-banner { display: none !important; } */
   </style>
 </head>
 <body>
