--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Website Shifted Up</title>
+  <title>Website Shifted Up, No Void Below</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -15,7 +15,7 @@
     .main-content {
       margin-top: -50px;
       width: 100vw;
-      height: 100vh;
+      height: calc(100vh + 50px); /* Add 50px to compensate for the upward shift */
       overflow: hidden;
     }
     iframe {
